fix: fixed opacity play button with z-index

--- a/css/style.css
+++ b/css/style.css
@@ -444,6 +444,7 @@ main #upgrade-bar {
     position: absolute;
     top: 50%;
     left: 50%;
+    z-index: 2;
     transform: translate(-50%, -50%);
     font-size: 3em;
     color: white;
